--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -1584,7 +1584,7 @@ However, we quickly realized that this project was ambitious. At this stage of o
 
 \<br\>
 
-After looking into various sources, our final procedure drew inspiration from Altaf Ali (2017) and a document by Torres-Reyna (2010) for Princeton University. The codes and the process were also influenced by Schmidheiny (2023) and Wagle (2021). Bourbonnais (2020) also played a role in our understanding part of the theory behind the use of panel data.
+After looking into various sources, our final procedure drew inspiration from Altaf (2017) and a document by Torres-Reyna (2010) for Princeton University. The codes and the process were also influenced by Schmidheiny (2023) and Wagle (2021). Bourbonnais (2020) also played a role in our understanding part of the theory behind the use of panel data.
 
 \<br\>
 
@@ -1608,7 +1608,7 @@ Présenter les modèles calculées : possible de les écrire mathématiquement a
 
 ##### Choice of the type of model
 
-We only used basics technics for econometric analysis of panel data. 3 simple and standards models are often used for panel data :
+We only employed basics yechniques for econometric analysis of panel data. Three simple and standards models are often used for panel data :
 
 1.  Regular OLS
 
@@ -1616,7 +1616,7 @@ We only used basics technics for econometric analysis of panel data. 3 simple an
 
 3.  Random effect model
 
-An early step consists to analyze which technic fits the most the dataset. The F Test for Individual and/or Time Effects of the plm package (pFtest) enable to arbitrate between the used of a fixed effect model a simple OLS. The decision rule is that if the p-value is below the significance level of 0.05, the fixed effect model is preferred. Here our p-value is, then we will prefered the fixed model.
+An early step consists to analyze which technique best fits the dataset. The F Test for Individual and/or Time Effects of the **plm** package (**pFtest**) enable us to arbitrate between the use of a fixed effect model and an OLS. The decision criterion is that if the p-value is below the significance level of 0.05, the fixed effect model is preferred. Here, our F test p-value is under the aforementioned level.
 
 ```{r Test_between_fixed_effect_and_OLS}
 
@@ -1630,7 +1630,7 @@ f_eff_2 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees +
 pFtest(f_eff_2, ols_2)
 ```
 
-The Haussman test continue our analysis by analysing which of the fixed effect model and the random one is the best fit for the model. Here, our p-value is below 0.05, the random effect model is choosen.
+The Hassman test continue our analysis by discerning the most suitable model between the fixed-effect and the random model. The p-value being below the significance level of 0.05, the fixed effect model is favored.
 
 ```{r Test_between_fixed_and_random_effect}
 #Random effect model
@@ -1642,13 +1642,13 @@ phtest(f_eff_2, r_eff_2)
 
 ```
 
-##### 2nd step : Test for time-fixed effect
+#####  Test for time-fixed effect and individual effect
 
-The fixed effect model being chosen, the next step was to identify if the addition of individual or time-fixed effects improve the quality of the model.
+Having selected the fixed effect model, the next step was to identify if the addition of individual or time-fixed effects improve the model's quality.
 
-We used TORRES-REYNA (2010)'s method which consist to add dummy variable to create our two new models. An alternative methode exist that consist to use the effect argument of the plm package with code such that code ' effect ="time" 'or effect = "individual" '(Wagle, 2021; Croissant et al., 2023; Hanck et al., 2023). However, nous avons du en écarter l'usage parce qu it gave us results that seems incoherent with too big regressor.
+We applied TORRES-REYNA (2010)'s method, which consist on adding dummy variables to craft models with these effect. On R, an alternative methode exists. It consists of using the **effect** argument of the **plm** package with code such as ' **effect ="time"** 'or **effect = "individual"** '(Wagle, 2021; Croissant et al., 2023; Hanck et al., 2023). However, we had to abandon its usage betcause it gave us results that seems incoherent. Indeed, they provided us coefficient that seems excessively large.
 
-With a p value below 0.05, the Brehsch-Pagan test support the hypothesis of the use of time-fixed effect but the Honda test reject it.
+With a p value below 0.05, the Brehsch-Pagan test support the hypothesis of using time-fixed effect. However, the Honda test rejects it. Despite diffrent coefficient, we decided to use time–fixed effects. Indeed, while testing the function with and without the **effect** argument, we remarked that despite having different coefficient, the two techniques found the same significant variables and also tend to support the use of the time-fixed effects. Therefore, the different indices seeming to favor the use of these effects, we used as hypothesis that time-fixed effects contribute to a better specification of the model.
 
 ```{r}
 f_eff_time_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
@@ -1657,7 +1657,7 @@ plmtest(f_eff_time_2, effect="time", type="honda")
 
 ```
 
-The Lagrange multiplier test emphasized the paralell use of individual effect.
+The Lagrange multiplier test support the simultaneous utilization of individual effects.
 
 ```{r}
 f_eff_ind_2<-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
@@ -1665,13 +1665,13 @@ plmtest(f_eff_time_2, effect="individual", type="bp")
 plmtest(f_eff_time_2, effect="individual", type="honda")
 ```
 
-We will then used a two way model that combined time-fixed and individual effect.
+We then used a two-way model combining time-fixed and individual effects.
 
 ```{r}
 f_eff_2ways_2 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year) + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
 ```
 
-It can be noted that if it gave us different coefficient, the use of the argument effect arrived at the same conclusion of the usage of a two-way model :
+As we said before, it can be noted that while it gave us different coefficients, the utilization of the **effect** argument arrived at the same conclusion regarding the use of a two-way model :
 
 *Test for time-fixed effect*
 
@@ -1696,34 +1696,37 @@ plmtest(f_eff_ind_2_2, effect="individual", type="bp")
 plmtest(f_eff_time_2_2, effect="individual", type="honda")
 ```
 
-
-
 #### Test for unit roots
 
-```{r Test_for_unit_roots}
-Panel.set<- plm.data(Econ_data_v2, index = c("departement_code", "year")) 
+By running an augmented Dickey-Fullter test on the attendance, it appears that the explanatory variable seems to bee stationary.
 
- adf.test(Econ_data_v2$entrées, k=2)
+```{r Test_for_unit_roots}
+Panel.set<- pdata.frame(Econ_data_v2, index = c("departement_code", "year")) 
+
+adf.test(Econ_data_v2$entrées, k=2)adf.test(Econ_data_v2$entrées, k=2)
 ```
 
 #### Test for serial correlation
+
+Our model also suffer from serial correlation. Indeed, Breusch-Godfrey/Wooldridge test has a p-value below the significance level. Both, Altaf and Torres-Reyna propose the same methode to daddressh cross-sectional dependence. The
 
 ```{r Test_for_serial_correlation}
 pbgtest(f_eff_2ways_2)
 ```
 
-
-##### Test of Heterosedasticity
+#### Test of Heterosedasticity
 
 With a p-value below 0.05, our model encounter heteroscedasticity.
+
 ```{r #Test_for_heteroscedasticity}
 bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2, studentize=F)
 ```
 
- However, the use of the vcovHC function for the sandwich package compute heteroskedasticity-consistent covariance estimators using White and Arellano method (White 1980, 1984; Arellano 1987). Moreover, it can be used to correct simultaneously both heteroskedasticity and serial correlation with the code ' method = "arellano" '.
- 
-##### Test for cross-sectional dependence 
-A last issue is common with panel data, and ours is not an exception. This issue is the cross-sectiona dependance. As we can see on the Breusch-Pagan and Pesaran tests below, our model suffers of this issue Beck and Katz method. To do so, we will finally not used the vcovHC function but do a similar work with the cvocBK which also tackles cross-sectional dependence
+Nevertheless, the use of the **vcovHC** function from the **sandwich** package computes heteroskedasticity-consistent covariance estimators using White and Arellano method (White 1980, 1984; Arellano 1987). Moreover, this function can be used to correct simultaneously both heteroskedasticity and serial correlation with the code ' **method = "arellano"** '.
+
+#### Test for cross-sectional dependence
+
+A final issue is common with panel data, and ours is no exception. This issue is the cross-sectional dependance. As we can see on the Breusch-Pagan and Pesaran tests below, our model suffers of this issue. The utilisation of Beck and Katz method is proposed by Altaf as a solution to tackle this issue. To use this method, we will forego the utilisation of the **vcovHC** function but do a similar work with the **vcovBK** one, which also tackles cross-sectional dependence
 
 ```{r Test_for_cross_sectional_dependence}
 #Breusch-Pagan LM test for cross-sectional dependence
@@ -1734,11 +1737,12 @@ pcdtest(f_eff_2, test = c("cd"))
 ```
 
 ### Outcome
+
 ```{r Coefficient_with_correction_of_the_different_issues}
 coeftest(f_eff_2ways_2, vcov = vcovBK(f_eff_2ways_2, method = "arellano", cluster = "group"))
 ```
 
-### Limitation
+### Limits
 
 Variable de controle : télévision
 
